@@ -12,10 +12,10 @@ TEXMFCNF=$srcdir/../kpathsea \
 
 # Prime the pump by running CTWILL twice
 TEXMFCNF=$srcdir/../kpathsea \
-  CWEBINPUTS=$srcdir/cwebdir ./ctwill ctwill.w || exit 1
+  CWEBINPUTS=$srcdir/cwebdir: ./ctwill +lpdf ctwill.w || exit 1
 
 TEXMFCNF=$srcdir/../kpathsea \
-  CWEBINPUTS=$srcdir/cwebdir ./ctwill ctwill.w || exit 1
+  CWEBINPUTS=$srcdir/cwebdir: ./ctwill +lpdf ctwill.w || exit 1
 
 # Run TeX for the first time
 TEXMFCNF=$srcdir/../kpathsea \
@@ -39,11 +39,11 @@ TEXMFCNF=$srcdir/../kpathsea \
 
 # Running CTWILL once again, but with options +P +lpdf
 TEXMFCNF=$srcdir/../kpathsea \
-  CWEBINPUTS=$srcdir/cwebdir ./ctwill +P +lpdf ctwill.w || exit 1
+  CWEBINPUTS=$srcdir/cwebdir: ./ctwill +P +lpdf ctwill.w || exit 1
 
 # Test CTWILL-PROOFSORT
 TEXMFCNF=$srcdir/../kpathsea \
-  ./ctwill-proofsort ctwill.tex > ctwill-sorted.tex || exit 1
+  $srcdir/cwebdir/ctwill-proofsort ctwill.tex > ctwill-sorted.tex || exit 1
 #mv ctwill-sorted.tex ctwill.tex || exit 1 # -- NOT!
 
 # Run pdfTeX once -- NOT!
