@@ -1,3 +1,7 @@
+2023-06-17  Andreas Scherer  <https://ascherer.github.io>
+
+	* Makefile.in: Integrate cwebdir/ctwill.test; run reautoconf.
+
 2023-03-29  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* tests/fn-generate.perl:
